--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "jquery": "*",
+    "jquery": "1.8.3",
     "cheerio": "*"
   }
 }
